--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
           <!-- Phone -->
           <a
-            href="tel:+381604321068"
+            href="tel:0604321068"
             class="contact-btn bg-blue-500 hover:bg-blue-600 text-white rounded-2xl p-8 block"
           >
             <div class="text-5xl mb-4">📞</div>
